# adv-squad-for-question-answering

./: .cursorignore  .gitignore  main.py  pyproject.toml
outputs/2025-09-10/14-19-26/.hydra/: config.yaml  hydra.yaml
outputs/2025-09-10/14-20-11/.hydra/: hydra.yaml
outputs/2025-09-10/14-20-46/.hydra/: hydra.yaml
outputs/2025-09-10/14-21-21/.hydra/: hydra.yaml
outputs/2025-09-10/14-21-59/.hydra/: hydra.yaml
outputs/2025-09-10/14-22-07/.hydra/: config.yaml  hydra.yaml
outputs/2025-09-10/14-23-58/.hydra/: hydra.yaml
outputs/2025-09-10/14-30-22/.hydra/: config.yaml  hydra.yaml
outputs/2025-09-10/14-34-01/.hydra/: config.yaml  hydra.yaml
outputs/2025-09-10/14-37-39/.hydra/: config.yaml  hydra.yaml
outputs/2025-09-10/14-39-57/.hydra/: config.yaml  hydra.yaml
outputs/2025-09-10/14-40-08/.hydra/: hydra.yaml
outputs/2025-09-10/14-50-21/.hydra/: config.yaml  hydra.yaml
outputs/2025-09-10/14-50-31/.hydra/: hydra.yaml
outputs/2025-09-10/14-51-40/.hydra/: hydra.yaml
outputs/2025-09-10/14-52-13/.hydra/: config.yaml  hydra.yaml
outputs/2025-09-10/14-53-58/.hydra/: config.yaml  hydra.yaml
src/: __init__.py
src/config/: dataset_augment.yaml  eval.yaml
src/config/transform/: adversarial_transform.yaml  adversarial_transform_no_checker.yaml  character_transform.yaml  semantic_transform.yaml  sentence_transform.yaml  word_transform.yaml
src/qa/: base.py  bert.py  eval.py
src/scripts/: augment_dataset.py  eval.py  filter_dataset.py  preprocess_dataset.py
src/transformation/: adversarial.py  base.py  character_level.py  character_level_fast.py  semantic_level.py  sentence_level.py  word_level.py
src/utils/: caching.py  colored_logging.py  contradiction.py  dataset.py  sentence_encoder.py  similarity.py  strings.py  tokenization_small100.py
