[project]
name = "perturbed-squad-question-answering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.0.0",
    "evaluate>=0.4.5",
    "gensim>=4.3.3",
    "hydra-core>=1.3.2",
    "ipykernel>=6.30.1",
    "pandas>=2.0.0",
    "sentence-transformers>=2.2.0",
    "textattack>=0.3.10",
    "transformers>=4.20.0",
    "sentencepiece>=0.1.99",
    "torch>=1.12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]

[tool.ruff]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.12+
target-version = "py312"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint]
# Enable standard linting rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["perturbed_squad_question_answering"]
